--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs</h3>
 
-<p>Full stack JavaScript framework built using the famous open sources libraries.. Nodejs, Anjularjs, expressjs, npm, socket-io.
+<p>Full stack JavaScript framework built using famous open sources libraries  Nodejs, Anjularjs, expressjs, and socket-io.
 
-Easy to build complex data driven JavaScript applications with minimum coding.
-Support multiple data connections suck as ms-sql, MySQL, PostgreSQL, and Mondodb.
-Real time framework build top of Express-js and socket-io
-The client side is powered by the Anjularjs. The layout can be build using the Anjularjs tags and elements.
-Modularized layout to simplify the comlex web pages.
-Can be mixed both Express-js and socket-io
+<ul>
+  <li>Easy to build complex data driven JavaScript applications with minimum coding.</li>
+  <li>Support multiple data connections suck as ms-sql, MySQL, PostgreSQL, and Mondodb.</li>
+   <li>Real time framework build top of Express-js and socket-io</li>
+  <li>The client side is powered by the Anjularjs. The layout can be build using the Anjularjs tags and elements.</li>
+   <li>Modularized layout to simplify the comlex web pages.</li>
+   <li>Can be mixed both Express-js and socket-io</li>
+</ul>
+
 </p>
 
 <h3>
