--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs (Beta)</h3>
 
 <p>Full stack JavaScript framework built using famous open sources libraries  Nodejs, Anjularjs, expressjs, and socket-io.
 
@@ -34,7 +34,7 @@
 </ul>
 
 </p>
-
+<!--
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
@@ -54,7 +54,7 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-
+-->
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nooljs/nooljs">Nooljs</a> is maintained by <a href="https://github.com/nooljs">nooljs</a>.</span>
 
