--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs (Beta)</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+  <span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs (Beta)</h3>
 
 <p>Full stack JavaScript framework built using famous open sources libraries  Nodejs, Anjularjs, expressjs, and socket-io.
 
@@ -34,6 +35,31 @@
 </ul>
 
 </p>
+
+<a id="Quick Start" class="anchor" href="#Quick Start" aria-hidden="true">
+  <span aria-hidden="true" class="octicon octicon-link"></span></a>Quick Start</h3>
+  
+<ol>
+  <li> Install nooljs with npm
+
+   `$ npm install nooljs -g` </li>
+  <li>  Create new nooljs project by running command
+   `$ nooljs`
+    It will ask project name. enter the project name( example testprj). It will create new folder for the project and sample application.
+ </li>
+  <li>  Go the new  project folder
+
+   `$ cd testproj`
+ </li>
+  <li> Update the npm dependency packages
+
+   `npm  update` </li>
+  <li> Run the application
+
+   `node app.js` </li>
+</ol>
+
+  5. 
 <!--
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
