--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <ol>
   <li> Install nooljs with npm
 
-   `$ npm install nooljs -g` </li>
+   <code> $ npm install nooljs -g </code>  
+   </li>
   <li>  Create new nooljs project by running command
    `$ nooljs`
     It will ask project name. enter the project name( example testprj). It will create new folder for the project and sample application.
