--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
    </p>
    </li>
   <li>  Create new nooljs project by running command
-   `$ nooljs`
+    <pt> <pre>
+      $ nooljs
+    </pre></pt>
     It will ask project name. enter the project name( example testprj). It will create new folder for the project and sample application.
  </li>
   <li>  Go the new  project folder
