--- a/index.html
+++ b/index.html
@@ -46,24 +46,25 @@
    </p>
    </li>
   <li>  Create new nooljs project by running command
-    <pt> <pre>
+    <pre>
       $ nooljs
-    </pre></pt>
-    It will ask project name. enter the project name( example testprj). It will create new folder for the project and sample application.
- </li>
+    </pre>
+   <p>
+      It will ask project name. enter the project name( example testprj). It will create new folder for the project and sample application.
+   </p>
+   </li>
   <li>  Go the new  project folder
-
-   `$ cd testproj`
+    <pre>$ cd testproj </pre>
  </li>
   <li> Update the npm dependency packages
 
-   `npm  update` </li>
+   <pre>npm  update </pre> </li>
   <li> Run the application
 
-   `node app.js` </li>
+   <pre>node app.js`</pre> </li>
 </ol>
 
-  5. 
+ 
 <!--
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
