--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@ The Layout is heart of the nooljs project.  Each page/module of the application 
     It should be keep inside the layout folder.
 </p>
  <pre>
+   <code>
     <nl-template id="store-edit-template" nl-permission="store-edit" nl-parent="main-content" >
     </nl-template>
     <nl-server-script>
     </nl-server-script>
    <nl-client-script>
+     </code>
  </pre>
  <p>
     The layout file contains three parts : 
