--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@ The Layout is heart of the nooljs project.  Each page/module of the application 
     It should be keep inside the layout folder.
 </p>
  
-   <code>
-    <nl-template id="store-edit-template" nl-permission="store-edit" nl-parent="main-content" >
-    </nl-template>
-    <nl-server-script>
-    </nl-server-script>
-   <nl-client-script>
-     </code>
+   <pre>
+    &lt;nl-template id="store-edit-template" nl-permission="store-edit" nl-parent="main-content" &gt;
+    &lt;/nl-template&gt;
+    &lt;nl-server-script&gt;
+    &lt;/nl-server-script&gt;
+   &lt;nl-client-script&gt;
+     </pre>
  
  <p>
     The layout file contains three parts : 
