--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Nooljs by nooljs</title>
-    <meta name="keywords" content="Node.js, Express, socketio, Full stack, framwork, database, JavaScript, mysql, sql server, postgresql, MongoDB">
+    <title>Nooljs - Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack  Javascript framework powered by Nodejs, Anjularjs, Express and Socket-io </title>
+    <meta name="description" content=" Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack  Javascript  framework powered by Nodejs, Anjularjs, Express and Socket-io">
+    <meta name="keywords" content="Nodejs, Node, Express, socket-io, Full stack, framwork, database, JavaScript, mysql,msSql,  sql server, postgresql, MongoDB">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
