--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Nooljs - Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack  Javascript framework powered by Nodejs, Anjularjs, Express and Socket-io </title>
+    <title>Nooljs - Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript framework powered by Nodejs, Anjularjs, Express and Socket-io </title>
     <meta name="description" content=" Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack  Javascript  framework powered by Nodejs, Anjularjs, Express and Socket-io">
     <meta name="keywords" content="Nodejs, Node, Express, socket-io, Full stack, framwork, database, JavaScript, mysql,msSql,  sql server, postgresql, MongoDB">
     <meta name="viewport" content="width=device-width, initial-scale=1">
