--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Nooljs - Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript framework powered by Nodejs, Anjularjs, Express and Socket-io </title>
-    <meta name="description" content=" Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack  Javascript  framework powered by Nodejs, Anjularjs, Express and Socket-io">
+    <meta name="description" content=" Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript  framework powered by Nodejs, Anjularjs, Express and Socket-io">
     <meta name="keywords" content="Nodejs, Node, Express, socket-io, Full stack, framwork, database, JavaScript, mysql,msSql,  sql server, postgresql, MongoDB">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -14,7 +14,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Nooljs</h1>
-      <h2 class="project-tagline">Multi database( MsSql,MySql, MongoDb, and PostgreSql) data driven full stack javascript framework  built top of the nodejs, npm, express, socketio, and  anjularjs</h2>
+      <h2 class="project-tagline"> Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack javascript framework  built top of the nodejs, npm, express, socketio, and  anjularjs</h2>
       <a href="https://github.com/nooljs/nooljs" class="btn">View on GitHub</a>
       <a href="https://github.com/nooljs/nooljs/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/nooljs/nooljs/tarball/master" class="btn">Download .tar.gz</a>
