--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Nooljs - Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript framework powered by Nodejs, Anjularjs, Express and Socket-io </title>
-    <meta name="description" content=" Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript  framework powered by Nodejs, Anjularjs, Express and Socket-io">
-    <meta name="keywords" content="Nodejs, Node, Express, socket-io, Full stack, framwork, database, JavaScript, mysql,msSql,  sql server, postgresql, MongoDB">
+    <title>Nooljs - Real time data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript framework powered by Nodejs, Angularjs, Express and Socket-io </title>
+    <meta name="description" content=" Real time data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack  Javascript  framework powered by Nodejs, Angularjs, Express and Socket-io">
+    <meta name="keywords" content="Nodejs, Angularjs, Node, Express, socket-io, Full stack, framwork, database, JavaScript, mysql,msSql,  sql server, postgresql, MongoDB">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,7 +14,8 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Nooljs</h1>
-      <h2 class="project-tagline"> Data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack javascript framework  built top of the nodejs, npm, express, socketio, and  anjularjs</h2>
+      <h2 class="project-tagline"> Real time data driven ( MsSql,MySql, MongoDb, and PostgreSql) full stack javascript framework  built top of the nodejs, npm, express, socketio, and  Angularjs</h2>
+      <a href="https://www.npmjs.com/package/nooljs" class="btn">View on npm</a>
       <a href="https://github.com/nooljs/nooljs" class="btn">View on GitHub</a>
       <a href="https://github.com/nooljs/nooljs/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/nooljs/nooljs/tarball/master" class="btn">Download .tar.gz</a>
@@ -25,13 +26,13 @@
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
   <span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to nooljs (Beta)</h3>
 
-<p>Full stack JavaScript framework built using famous open sources libraries  Nodejs, Anjularjs, expressjs, and socket-io.
+<p>Full stack JavaScript framework built using famous open sources libraries  Nodejs, Angularjs, expressjs, and socket-io.
 
 <ul>
   <li>Easy to build complex data driven JavaScript applications with minimum coding.</li>
   <li>Support multiple data connections suck as Ms-sql, MySQL, PostgreSQL, and Mondodb.</li>
    <li>Real time framework build top of Express-js and Socket-io</li>
-  <li>The client side is powered by the Anjularjs. The layout can be build using the Anjularjs tags and elements.</li>
+  <li>The client side is powered by the Angularjs. The layout can be build using the Angularjs tags and elements.</li>
    <li>Modularized layout to simplify the complex web pages.</li>
    <li>Can be mixed both Express-js and Socket-io</li>
 </ul>
@@ -177,10 +178,10 @@ The Layout is heart of the nooljs project.  Each page/module of the application 
     <p>
        <ul>
          <li>
-           nl-db-data  :  This contains the executing data query. The parameters are getting from Anjularjs tag or scope. The connection for the database is defined in the default connection at the config section.
+           nl-db-data  :  This contains the executing data query. The parameters are getting from Angularjs tag or scope. The connection for the database is defined in the default connection at the config section.
            </li>
          <li>
-           nl-db-model  : The result of the executing query will be stored into this Anjularjs model. The data can access in the client side using Ajularjs scope.
+           nl-db-model  : The result of the executing query will be stored into this Angularjs model. The data can access in the client side using Ajularjs scope.
            </li>
          <li> 
           nl-client-post-data : The name of the client side of function which will be executed after result received in the client. This is optional attribute.
@@ -239,7 +240,7 @@ The Layout is heart of the nooljs project.  Each page/module of the application 
            nl-server-data  :  This contains name of the server side function and it should be inside the "nl-server-script" tag.
          </li>
          <li>
-           nl-db-model  :The result of the executing query will be stored into this Anjularjs model. The data can access in the client side using Ajularjs scope.
+           nl-db-model  :The result of the executing query will be stored into this Angularjs model. The data can access in the client side using Ajularjs scope.
            </li>
          <li> 
           nl-client-post-data :  The name of the client side of function which will be executed after result received in the client. This is optional attribute.
